# ShipFlow-Tauri

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos-app.yml  build-service-binary.yml  build-windows-exe.yml
EX-SCRAP/src/: api_contract.rs  app_state.rs  auth.rs  canary.rs  config.rs  datetime.rs  deprecation.rs  drift_guard.rs  error.rs  incidents.rs  jobs.rs  lib.rs  main.rs  managed_tokens.rs  metrics.rs  persistent_cache.rs  rate_limit.rs  request_context.rs  server.rs  token_state.rs  track_batch.rs  upstream.rs  webhook.rs
EX-SCRAP/src/parse/: bag.rs  manifest.rs  mod.rs  track.rs
EX-SCRAP/src/routes/: bag.rs  manifest.rs  mod.rs  track.rs  v1.rs
apps/service/: Cargo.toml
apps/service/src/: main.rs
crates/shipflow-core/: Cargo.toml
crates/shipflow-core/src/: bag.rs  lib.rs  manifest.rs  model.rs  parser.rs  upstream.rs
crates/shipflow-service-runtime/: Cargo.toml
crates/shipflow-service-runtime/src/: http_api.rs  lib.rs  lookup_cache.rs  model.rs
docs/: desktop-service-split.md  multi-sheet-architecture.md  native-platform-architecture.md  refactor-audit.md  runtime-architecture.md  service-mode-architecture.md
scripts/: prepare-service-binary.mjs
src/: App.test.tsx  App.tsx  main.tsx  qrcode.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_menu_runtime.rs  app_runtime.rs  lib.rs  lookup_runtime.rs  main.rs  os_bridge.rs  pod_preview.rs  runtime_log.rs  service.rs  service_client.rs  service_runtime.rs  test_support.rs  window_runtime.rs  workspace_document.rs
src-tauri/src/fixtures/: pos_tracking_nullable_numeric.html  pos_tracking_reordered_tables.html  pos_tracking_runsheet_failedtoddelivered.html  pos_tracking_sample.html
src-tauri/src/service/: http_api.rs  process_runtime.rs  runtime_config.rs  state_store.rs  tray_runtime.rs
src-tauri/src/tracking/: mod.rs  model.rs  parser.rs  server.rs  upstream.rs
src/features/: clipboard.ts  useActionNotices.ts  useFrontendRuntimeLogging.ts
src/features/components/: ActionNoticeStack.tsx
src/features/service/: ServiceSettingsApp.tsx  useServiceSettingsController.ts
src/features/sheet/: actions.test.ts  actions.ts  columns.ts  default-state.ts  selectors.test.ts  selectors.ts  state.test.ts  state.ts  types.ts  utils.test.ts  utils.ts
src/features/tracking/: useTrackingRuntimeController.ts
src/features/workspace/: WorkspaceApp.tsx  actions.ts  default-state.ts  document.ts  persistence.ts  selectors.ts  state.test.ts  (+34 more)
(+12 files in other folders)
