[package]
name = "shipflow3-tauri"
version = "0.1.0"
description = "Desktop shipment tracking app built with Tauri"
authors = ["Codex"]
edition = "2021"
default-run = "shipflow3-tauri"

[lib]
name = "shipflow3_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
axum = "0.7"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = ["tray-icon"] }
tao = "0.34.8"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tray-icon = "0.21.3"
png = "0.17.16"
