[package]
name = "shipflow-core"
version = "0.1.0"
edition = "2021"
description = "Shared tracking core for ShipFlow Desktop and ShipFlow Service"
license = "UNLICENSED"

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
serde_json = "1"
