[package]
name = "shipflow-service-runtime"
version = "0.1.0"
edition = "2021"
description = "HTTP service runtime for ShipFlow Service"
license = "UNLICENSED"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shipflow-core = { path = "../shipflow-core" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
